services/kubectl-mcp/k8s/deploy.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: netsentinel
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubectl-ai-api
  namespace: netsentinel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubectl-ai-api
  template:
    metadata:
      labels:
        app: kubectl-ai-api
    spec:
      serviceAccountName: kubectl-ai-sa
      containers:
        - name: kubectl-ai-api
          image: quay.io/bpandey/netsentinel-kubectl-ai:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8088
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: kubectl-ai-api
  namespace: netsentinel
spec:
  selector:
    app: kubectl-ai-api
  ports:
    - name: http
      port: 80
      targetPort: 8088
---
# Route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kubectl-ai-api
  namespace: netsentinel
spec:
  to:
    kind: Service
    name: kubectl-ai-api
  port:
    targetPort: http
  tls:
    termination: edge
